# codex-i-gotta-run

./: .gitignore  AGENTS.md  README.MD  TODO.md  config.toml  pyproject.toml
docs/: assumptions.md  tech-stack-plan.md
src/: adapter.py  cli.py  config.py  ingestion.py  logging_utils.py  models.py  registry.py  service.py  steering.py  telegram_integration.py  transport.py
src/codex_thread_orchestrator/: __init__.py  __main__.py  adapter.py  cli.py  config.py  ingestion.py  logging_utils.py  models.py  registry.py  service.py  steering.py  transport.py
tests/: __init__.py  conftest.py  fake_app_server.py  huge_line_server.py  test_config.py  test_registry.py  test_service_cli.py  test_telegram_integration.py  test_transport_adapter.py
