[project]
name = "codex-i-gotta-run"
version = "0.1.0"
description = "Local-only prototype sidecar for orchestrating Codex threads via the App Server."
readme = "README.MD"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11.0,<3",
  "rich>=14.0.0",
  "typer>=0.16.0,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9",
  "pytest-asyncio>=1.0.0,<2",
]

[project.scripts]
codex-i-gotta-run = "cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
